@@ -52,6 +52,8 @@
 # define SYMBOL(s) s
 #endif
 
+#define KSEG 0x10
+
 /****************************************************************************
  * Nasm
  ****************************************************************************/
@@ -84,12 +86,12 @@ SYMBOL(gdt_flush):
     mov		eax, [esp+4]		/* Get the pointer to the GDT, passed as a parameter */
     lgdt	[eax]				/* Load the new GDT pointer */
 
-    mov		ax, 0x10			/* 0x10 is the offset in the GDT to our data segment */
-    mov		ds, ax				/* Load all data segment selectors */
-    mov		es, ax
-    mov		fs, ax
-    mov		gs, ax
-    mov		ss, ax
+    mov		$KSEG, ax 			/* KSEG is the offset in the GDT to our data segment */
+    mov		ax, ds				/* Load all data segment selectors */
+    mov		ax, es
+    mov		ax, fs
+    mov		ax, gs
+    mov		ax, ss
     jmp		0x08:.gflush		/* 0x08 is the offset to our code segment: Far jump! */
 .gflush:
     ret
@@ -135,12 +137,12 @@ SYMBOL(gdt_flush):
     movl	%eax, 4(%esp)	/* Get the pointer to the GDT, passed as a parameter */
     lgdt	(%eax)			/* Load the new GDT pointer */
 
-    mov		%ax, 0x10		/* 0x10 is the offset in the GDT to our data segment */
-    mov		%ds, %ax		/* Load all data segment selectors */
-    mov		%es, %ax
-    mov		%fs, %ax
-    mov		%gs, %ax
-    mov		%ss, %ax
+    mov		$KSEG, %ax 		/* KSEG is the offset in the GDT to our data segment */
+    mov		%ax, %ds 		/* Load all data segment selectors */
+    mov		%ax, %es
+    mov		%ax, %fs
+    mov		%ax, %gs
+    mov		%ax, %ss
     jmp		$0x08, $.Lgflush		/* 0x08 is the offset to our code segment: Far jump! */
 .Lgflush:
     ret
