@@ -33,7 +33,7 @@
  *
  ****************************************************************************/
 
-OUTPUT_ARCH(elf_i386)
+OUTPUT_ARCH(i386)
 ENTRY(__start)
 SECTIONS
 {
